dw_client_src = [
    '../dlls/wpn_shared/disc_weapon_disc.cpp',
    'ev_hldm.cpp',
    'hl/hl_baseentity.cpp',
    'hl/hl_events.cpp',
    'hl/hl_objects.cpp',
    'hl/hl_weapons.cpp',
    'Ricochet_JumpPads.cpp',
    'ammo.cpp',
    'ammo_secondary.cpp',
    'ammohistory.cpp',
    'battery.cpp',
    'cdll_int.cpp',
    'com_weapons.cpp',
    'death.cpp',
    'demo.cpp',
    'entity.cpp',
    'ev_common.cpp',
    'events.cpp',
    'flashlight.cpp',
    'GameStudioModelRenderer.cpp',
    'geiger.cpp',
    'health.cpp',
    'hud.cpp',
    'hud_msg.cpp',
    'hud_redraw.cpp',
    'hud_servers.cpp',
    'hud_update.cpp',
    'in_camera.cpp',
    'input.cpp',
    'inputw32.cpp',
    '../../public/interface.cpp',
    'menu.cpp',
    'message.cpp',
    '../../common/parsemsg.cpp',
    '../pm_shared/pm_debug.c',
    '../pm_shared/pm_math.c',
    '../pm_shared/pm_shared.c',
    'saytext.cpp',
    'status_icons.cpp',
    'statusbar.cpp',
    'studio_util.cpp',
    'StudioModelRenderer.cpp',
    'text_message.cpp',
    'train.cpp',
    'tri.cpp',
    'util.cpp',
    '../../game_shared/vgui_checkbutton2.cpp',
    'vgui_ConsolePanel.cpp',
    'vgui_ControlConfigPanel.cpp',
    'vgui_CustomObjects.cpp',
    'vgui_discobjects.cpp',
    '../../game_shared/vgui_grid.cpp',
    '../../game_shared/vgui_helpers.cpp',
    'vgui_int.cpp',
    '../../game_shared/vgui_listbox.cpp',
    '../../game_shared/vgui_loadtga.cpp',
    'vgui_MOTDWindow.cpp',
    'vgui_SchemeManager.cpp',
    'vgui_ScorePanel.cpp',
    '../../game_shared/vgui_scrollbar2.cpp',
    'vgui_ServerBrowser.cpp',
    '../../game_shared/vgui_slider2.cpp',
    'vgui_TeamFortressViewport.cpp',
    'view.cpp',
    '../../game_shared/voice_banmgr.cpp',
    'voice_status.cpp',
    'ammo.h',
    'ammohistory.h',
    'camera.h',
    'cl_dll.h',
    'cl_util.h',
    'com_weapons.h',
    'demo.h',
    'ev_hldm.h',
    'eventscripts.h',
    'GameStudioModelRenderer.h',
    'health.h',
    'hud.h',
    'hud_iface.h',
    'hud_servers.h',
    'hud_servers_priv.h',
    'in_defs.h',
    'kbutton.h',
    '../../common/parsemsg.h',
    '../pm_shared/pm_debug.h',
    '../pm_shared/pm_defs.h',
    '../pm_shared/pm_info.h',
    '../pm_shared/pm_materials.h',
    '../pm_shared/pm_movevars.h',
    '../pm_shared/pm_shared.h',
    'Ricochet_BSPFile.h',
    'Ricochet_JumpPads.h',
    'studio_util.h',
    'StudioModelRenderer.h',
    'util_vector.h',
    'vgui_ConsolePanel.h',
    'vgui_ControlConfigPanel.h',
    'vgui_discobjects.h',
    'vgui_int.h',
    'vgui_SchemeManager.h',
    'vgui_ScorePanel.h',
    'vgui_ServerBrowser.h',
    'vgui_TeamFortressViewport.h',
    'view.h',
    'wrect.h',
]

dw_client_defines = [
    '-DVOXEL',
    '-DQUAKE2',
    '-DVALVE_DLL',
    '-DCLIENT_DLL',
 	'-D_MBCS',
]

dw_client_includes = include_directories([
	'../',
	'../dlls',
	'./',
	'../../game_shared',
	'../../engine',
	'../../public',
	'../../common',
	'../pm_shared',
	'../../utils/vgui/include',
	'../../external',
])

dw_client_deps = [
    vgui2_dep,
    vgui_dep,
    SDL2_dep,
    ws2_32_dep,
	vgui_controls_dep,
	game_controls_dep,
	dw_server_dep,
]

install_dir = '/ricochet/cl_dlls' 
target_name = 'client'
dw_client_lib = shared_library(target_name, dw_client_src,
    dependencies        : dw_client_deps,
    cpp_args            : dw_client_defines,
    c_args              : dw_client_defines,
    include_directories : [ dw_client_includes ],
    install             : true,
    install_dir         : output_dir + install_dir,
)

dw_client_dep = declare_dependency(
    link_with           : [ dw_client_lib ],
)

cmd = join_paths(meson.current_build_dir(), '..\..\..\devtools\meson_set_outdir.bat')
cs = run_command(cmd, [target_name, meson.current_build_dir(), install_dir], check: false)
#message(cs.stdout())