dw_server_src = [
    'airtank.cpp',
    'animating.cpp',
    'animation.cpp',
    'bmodels.cpp',
    'buttons.cpp',
    'cbase.cpp',
    'client.cpp',
    'combat.cpp',
    'disc_arena.cpp',
    'disc_powerups.cpp',
    'wpn_shared/disc_weapon_disc.cpp',
    'doors.cpp',
    'effects.cpp',
    'explode.cpp',
    'func_break.cpp',
    'func_tank.cpp',
    'game.cpp',
    'gamerules.cpp',
    'ggrenade.cpp',
    'globals.cpp',
    'h_ai.cpp',
    'h_battery.cpp',
    'h_cycler.cpp',
    'h_export.cpp',
    'healthkit.cpp',
    'items.cpp',
    'lights.cpp',
    'maprules.cpp',
    'mortar.cpp',
    'mpstubb.cpp',
    'multiplay_gamerules.cpp',
    'observer.cpp',
    'pathcorner.cpp',
    'plane.cpp',
    'plats.cpp',
    'player.cpp',
    '../pm_shared/pm_debug.c',
    '../pm_shared/pm_math.c',
    '../pm_shared/pm_shared.c',
    'singleplay_gamerules.cpp',
    'skill.cpp',
    'sound.cpp',
    'soundent.cpp',
    'spectator.cpp',
    'subs.cpp',
    'teamplay_gamerules.cpp',
    'triggers.cpp',
    'util.cpp',
    '../../game_shared/voice_gamemgr.cpp',
    'weapons.cpp',
    'world.cpp',
    'xen.cpp',
    'activity.h',
    'activitymap.h',
    'animation.h',
    'basemonster.h',
    'cbase.h',
    'cdll_dll.h',
    'client.h',
    'decals.h',
    'disc_arena.h',
    'discwar.h',
    'doors.h',
    'effects.h',
    'enginecallback.h',
    'explode.h',
    'extdll.h',
    'func_break.h',
    'game.h',
    'gamerules.h',
    '../../dlls/hornet.h',
    'items.h',
    'maprules.h',
    'monsterevent.h',
    'monsters.h',
    'nodes.h',
    'plane.h',
    'player.h',
    '../pm_shared/pm_debug.h',
    '../pm_shared/pm_defs.h',
    '../pm_shared/pm_info.h',
    '../pm_shared/pm_materials.h',
    '../pm_shared/pm_movevars.h',
    '../pm_shared/pm_shared.h',
    'saverestore.h',
    'schedule.h',
    'scriptevent.h',
    'skill.h',
    'soundent.h',
    'spectator.h',
    'talkmonster.h',
    'teamplay_gamerules.h',
    'trains.h',
    'util.h',
    'vector.h',
    'weapons.h',
]


dw_server_defines = [
    '-DVOXEL',
    '-DQUAKE2',
    '-DVALVE_DLL',
]

dw_server_includes = include_directories([
	'../../public',
	'.',
	'../../game_shared',
	'../dlls',
	'../../engine',
	'../../common',
	'../pm_shared',
	'../'
])

install_dir = '/ricochet/dlls' 
target_name = 'mp'
dw_server_lib = shared_library(target_name, dw_server_src,
    cpp_args            : dw_server_defines,
    c_args              : dw_server_defines,
    include_directories : [ dw_server_includes ],
    vs_module_defs      : 'mp.def',
    install             : true,
    install_dir         : output_dir + install_dir,
)

dw_server_dep = declare_dependency(
    link_with           : [ dw_server_lib ],
)

cmd = join_paths(meson.current_build_dir(), '..\..\..\devtools\meson_set_outdir.bat')
cs = run_command(cmd, [target_name, meson.current_build_dir(), install_dir], check: false)
#message(cs.stdout())